# pyscrape

./: pyproject.toml
tests/: t_web.py
web/: site_visitor.py
