[project]
name = "pyscrape"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "A very good project indeed"
readme = "readme.md"
dependencies = ['selenium','beautifulsoup4','func_timeout', 'holytools', 'psutils']

[tool.setuptools.packages.find]
include = ["pyscrape"]
